--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "tsx watch src/server.ts",
     "knex": "tsx ./node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.1",
     "supertest": "^7.0.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
