--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "api-rest-node",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "tsx ./node_modules/.bin/knex",
@@ -22,14 +25,15 @@
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "sqlite3": "^5.1.7"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.13.1",
     "zod": "^3.24.1"
   }
 }
